--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,6 +33,7 @@ excludes=
 file.reference.afterdark-1.0.10.jar=afterdark-1.0.10.jar
 file.reference.aopalliance-1.0.jar=aopalliance-1.0.jar
 file.reference.commons-fileupload-1.3.1.jar=commons-fileupload-1.3.1.jar
+file.reference.commons-io-2.5.jar=C:\\Users\\Joaqu\u00edn\\Desktop\\commons-io-2.5.jar
 file.reference.jandex-2.0.3.Final.jar=jandex-2.0.3.Final.jar
 includes=**
 j2ee.compile.on.save=true
@@ -53,7 +54,8 @@ javac.classpath=\
     ${libs.hibernate4-persistence.classpath}:\
     ${file.reference.jandex-2.0.3.Final.jar}:\
     ${file.reference.afterdark-1.0.10.jar}:\
-    ${file.reference.commons-fileupload-1.3.1.jar}
+    ${file.reference.commons-fileupload-1.3.1.jar}:\
+    ${file.reference.commons-io-2.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
